# calorie-tracker-app

./: .env.example  .env_sample  .gitignore  .npmrc  CLAUDE.md  README.md  ROADMAP.md  config-store.js  docker-compose.yml  ecosystem.config.cjs  llm.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.js  tsconfig.base.json  turbo.json
api/ai-service/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
api/ai-service/app/: __init__.py  config.py  errors.py  main.py  schemas.py  security.py
api/ai-service/app/integrations/: __init__.py  barcode.py  open_food_facts.py  storage.py  usda.py
api/ai-service/app/routers/: admin.py  analyze.py  barcode.py  nutrition.py
api/ai-service/app/services/: __init__.py  analysis.py  prompt.py
api/ai-service/app/services/providers/: __init__.py  anthropic.py  gemini.py  openai_compatible.py
api/node-api/: README.md  package.json  tsconfig.json
api/node-api/src/: app.ts  env.ts  index.ts
apps/mobile/: .env.example  .gitignore  README.md  app.json  metro.config.js  package.json
apps/mobile/app/: _layout.tsx  login.tsx
apps/mobile/assets/: README.md
apps/mobile/components/: AddMealForm.tsx  BarChart.tsx  DateSelector.tsx  Empty.tsx  FoodPicker.tsx  HealthDots.tsx  InsightCard.tsx  MealRow.tsx  (+4 more)
apps/web/: .env.example  README.md  next.config.mjs  package.json  tsconfig.json
legacy/: llm.js  package.json
legacy/public/: admin.html  foods.js
public/: index.html
scripts/: autostart-remove.ps1  autostart-setup.ps1  https-proxy.mjs  open-firewall.ps1
(+135 files in other folders)
