[project]
name = "k21-ai-service"
version = "0.1.0"
description = "AI/image/nutrition processing service for the K21 Calorie Tracker."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]  # FastAPI uses function calls (Depends/Query) in defaults.

[tool.ruff.lint.isort]
known-first-party = ["app"]
